syntax = "proto3";

package proto;

option go_package = "github.com/stnokott/spacetrader-server/internal/proto";
option csharp_namespace = "GrpcSpacetrader";

enum TradeItem {
	UNKNOWN_TRADEITEM = 0;
	PRECIOUS_STONES = 1;
	QUARTZ_SAND = 2;
	SILICON_CRYSTALS = 3;
	AMMONIA_ICE = 4;
	LIQUID_HYDROGEN = 5;
	LIQUID_NITROGEN = 6;
	ICE_WATER = 7;
	EXOTIC_MATTER = 8;
	ADVANCED_CIRCUITRY = 9;
	GRAVITON_EMITTERS = 10;
	IRON = 11;
	IRON_ORE = 12;
	COPPER = 13;
	COPPER_ORE = 14;
	ALUMINUM = 15;
	ALUMINUM_ORE = 16;
	SILVER = 17;
	SILVER_ORE = 18;
	GOLD = 19;
	GOLD_ORE = 20;
	PLATINUM = 21;
	PLATINUM_ORE = 22;
	DIAMONDS = 23;
	URANITE = 24;
	URANITE_ORE = 25;
	MERITIUM = 26;
	MERITIUM_ORE = 27;
	HYDROCARBON = 28;
	ANTIMATTER = 29;
	FAB_MATS = 30;
	FERTILIZERS = 31;
	FABRICS = 32;
	FOOD = 33;
	JEWELRY = 34;
	MACHINERY = 35;
	FIREARMS = 36;
	ASSAULT_RIFLES = 37;
	MILITARY_EQUIPMENT = 38;
	EXPLOSIVES = 39;
	LAB_INSTRUMENTS = 40;
	AMMUNITION = 41;
	ELECTRONICS = 42;
	SHIP_PLATING = 43;
	SHIP_PARTS = 44;
	EQUIPMENT = 45;
	FUEL = 46;
	MEDICINE = 47;
	DRUGS = 48;
	CLOTHING = 49;
	MICROPROCESSORS = 50;
	PLASTICS = 51;
	POLYNUCLEOTIDES = 52;
	BIOCOMPOSITES = 53;
	QUANTUM_STABILIZERS = 54;
	NANOBOTS = 55;
	AI_MAINFRAMES = 56;
	QUANTUM_DRIVES = 57;
	ROBOTIC_DRONES = 58;
	CYBER_IMPLANTS = 59;
	GENE_THERAPEUTICS = 60;
	NEURAL_CHIPS = 61;
	MOOD_REGULATORS = 62;
	VIRAL_AGENTS = 63;
	MICRO_FUSION_GENERATORS = 64;
	SUPERGRAINS = 65;
	LASER_RIFLES = 66;
	HOLOGRAPHICS = 67;
	SHIP_SALVAGE = 68;
	RELIC_TECH = 69;
	NOVEL_LIFEFORMS = 70;
	BOTANICAL_SPECIMENS = 71;
	CULTURAL_ARTIFACTS = 72;
	FRAME_PROBE = 73;
	FRAME_DRONE = 74;
	FRAME_INTERCEPTOR = 75;
	FRAME_RACER = 76;
	FRAME_FIGHTER = 77;
	FRAME_FRIGATE = 78;
	FRAME_SHUTTLE = 79;
	FRAME_EXPLORER = 80;
	FRAME_MINER = 81;
	FRAME_LIGHT_FREIGHTER = 82;
	FRAME_HEAVY_FREIGHTER = 83;
	FRAME_TRANSPORT = 84;
	FRAME_DESTROYER = 85;
	FRAME_CRUISER = 86;
	FRAME_CARRIER = 87;
	REACTOR_SOLAR_I = 88;
	REACTOR_FUSION_I = 89;
	REACTOR_FISSION_I = 90;
	REACTOR_CHEMICAL_I = 91;
	REACTOR_ANTIMATTER_I = 92;
	ENGINE_IMPULSE_DRIVE_I = 93;
	ENGINE_ION_DRIVE_I = 94;
	ENGINE_ION_DRIVE_II = 95;
	ENGINE_HYPER_DRIVE_I = 96;
	MODULE_MINERAL_PROCESSOR_I = 97;
	MODULE_GAS_PROCESSOR_I = 98;
	MODULE_CARGO_HOLD_I = 99;
	MODULE_CARGO_HOLD_II = 100;
	MODULE_CARGO_HOLD_III = 101;
	MODULE_CREW_QUARTERS_I = 102;
	MODULE_ENVOY_QUARTERS_I = 103;
	MODULE_PASSENGER_CABIN_I = 104;
	MODULE_MICRO_REFINERY_I = 105;
	MODULE_SCIENCE_LAB_I = 106;
	MODULE_JUMP_DRIVE_I = 107;
	MODULE_JUMP_DRIVE_II = 108;
	MODULE_JUMP_DRIVE_III = 109;
	MODULE_WARP_DRIVE_I = 110;
	MODULE_WARP_DRIVE_II = 111;
	MODULE_WARP_DRIVE_III = 112;
	MODULE_SHIELD_GENERATOR_I = 113;
	MODULE_SHIELD_GENERATOR_II = 114;
	MODULE_ORE_REFINERY_I = 115;
	MODULE_FUEL_REFINERY_I = 116;
	MOUNT_GAS_SIPHON_I = 117;
	MOUNT_GAS_SIPHON_II = 118;
	MOUNT_GAS_SIPHON_III = 119;
	MOUNT_SURVEYOR_I = 120;
	MOUNT_SURVEYOR_II = 121;
	MOUNT_SURVEYOR_III = 122;
	MOUNT_SENSOR_ARRAY_I = 123;
	MOUNT_SENSOR_ARRAY_II = 124;
	MOUNT_SENSOR_ARRAY_III = 125;
	MOUNT_MINING_LASER_I = 126;
	MOUNT_MINING_LASER_II = 127;
	MOUNT_MINING_LASER_III = 128;
	MOUNT_LASER_CANNON_I = 129;
	MOUNT_MISSILE_LAUNCHER_I = 130;
	MOUNT_TURRET_I = 131;
	SHIP_PROBE = 132;
	SHIP_MINING_DRONE = 133;
	SHIP_SIPHON_DRONE = 134;
	SHIP_INTERCEPTOR = 135;
	SHIP_LIGHT_HAULER = 136;
	SHIP_COMMAND_FRIGATE = 137;
	SHIP_EXPLORER = 138;
	SHIP_HEAVY_FREIGHTER = 139;
	SHIP_LIGHT_SHUTTLE = 140;
	SHIP_ORE_HOUND = 141;
	SHIP_REFINING_FREIGHTER = 142;
	SHIP_SURVEYOR = 143;
}
